--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,15 @@ version: '3.8'
 services:
   backend:
     build:
-      context: .
-      dockerfile: server/Dockerfile
+      context: ./server  
+      dockerfile: Dockerfile  
     ports:
-      - "8000:8000" 
-  
+      - "8000:8000"
+
   frontend:
     build:
-      context: .
-      dockerfile: client/Dockerfile
+      context: ./client  
+      dockerfile: Dockerfile  
     ports:
       - "5173:5173" 
     depends_on:
